Fix layout bug

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -28,5 +28,5 @@ main {
   font-size: 1.25em;
   line-height: 1.75;
   margin: auto;
-  max-width: var(--wrap);
+  width: var(--wrap);
 }
